--- a/src/views/Donate.hbs
+++ b/src/views/Donate.hbs
@@ -1,5 +1,5 @@
-{{> Menu }}
-{{> Heading }}
+{{> menu }}
+{{> heading }}
 
 <div class="columns">
   <div class="column is-5">
@@ -16,7 +16,7 @@
       </header>
       <div class="card-content">
         <div class="content">
-          {{> DonationForm}}
+          {{> donation-form}}
         </div>
       </div>
     </div>
