--- a/src/views/Report.hbs
+++ b/src/views/Report.hbs
@@ -1,5 +1,5 @@
-{{> Menu }}
-{{> Heading }}
+{{> menu }}
+{{> heading }}
 
 <div class="columns">
   <div class="column">
@@ -11,7 +11,7 @@
       </header>
       <div class="card-content">
         <div class="content">
-          {{> DonationList}}
+          {{> donation-list}}
         </div>
       </div>
     </div>
