--- a/src/views/partials/donation-form.hbs
+++ b/src/views/partials/donation-form.hbs
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="field mt-2">
-    {{> Coordinates}}
+    {{> coordinates}}
   </div>
   <div class="field">
     <div class="control">
