--- a/src/views/Signup.hbs
+++ b/src/views/Signup.hbs
@@ -4,7 +4,7 @@
       <div class="column is-4 is-offset-4">
         <h3 class="title has-text-black has-text-centered">Login to DONATION</h3>
         <div class="box">
-          {{> SignupForm }}
+          {{> signup-form }}
         </div>
       </div>
     </div>
