--- a/src/views/partials/login-form.hbs
+++ b/src/views/partials/login-form.hbs
@@ -1,4 +1,4 @@
 <form action="/authenticate" method="POST">
-  {{> UserCredentials }}
+  {{> user-credentials }}
   <button class="button is-success is-fullwidth">Log In</button>
 </form>
